AWSアカウント作成とセキュリティ設定に関する完全ガイドを追加

--- a/plan/目次.md
+++ b/plan/目次.md
@@ -1,3 +1,37 @@
+### 1\. 📢 戦略：ハブ＆スポーク構成
+
+1本の長大な記事にするのではなく、\*\*「メイン記事（本命）」**を中心とし、そこから**「補足記事（初心者・エラー対応）」\*\*へリンクを飛ばす形にします。
+
+  * **🏆 メイン記事（Hub）：**
+      * **テーマ:** Dockerを使ったハイブリッド環境でのFastAPI × Serverlessデプロイ（今回の成功体験そのもの）。
+      * **ターゲット:** ポートフォリオとして見せる採用担当者、中級者、ベストプラクティスを知りたい人。
+      * **SEO狙い:** 「FastAPI Serverless デプロイ」「FastAPI Docker 環境構築」など、技術選定ワード。
+  * **🛠️ 補足記事A（Spoke 1）：**
+      * **テーマ:** Windowsユーザーのための環境構築トラブルシューティング（PowerShell、IAM権限、ローカルインストール手順）。
+      * **ターゲット:** 初心者、エラーで検索してきた人。
+      * **SEO狙い:** エラーコード、具体的なエラーメッセージ（ロングテール）。
+
+今回はまず、\*\*「メイン記事」\*\*の完成を目指します。
+
+-----
+
+### 2\. 📝 メイン記事のタイトル案（決定版）
+
+検索流入（SEO）と、ターゲットの広さ（クリック率）のバランスを考慮しました。
+
+  * **タイトル:**
+    **【保存版】FastAPI × Serverless Framework開発の正解ルート：Dockerで環境汚染ゼロの爆速デプロイ**
+  * **解説:**
+      * 「保存版」「正解ルート」：権威性を示し、クリックを誘います。
+      * 「FastAPI」「Serverless Framework」「Docker」：重要キーワードを網羅。
+      * 「環境汚染ゼロ」：エンジニアに刺さるメリットを提示。
+
+-----
+
+### 3\. 📑 メイン記事の構成案（目次）
+
+読者が途中で迷子にならないよう、論理的なステップで構成します。
+
 | 章 | タイトル | 内容・ポイント |
 | :--- | :--- | :--- |
 | **はじめに** | **なぜ「Docker × Serverless」なのか？** | ・Windows開発の辛さ（パス、権限、バージョン競合）への共感。<br>・Dockerを使うメリット（環境の一致、汚染ゼロ）。<br>・**完成物のスクショ提示**（ゴールを見せる）。 |
@@ -7,5 +41,39 @@
 | **Step 3** | **Serverless Frameworkの設定とデプロイ** | ・**最大の山場**。`serverless.yml`の解説。<br>・V4ではなくV3を使う理由、IAM権限設定、Pythonパスの指定などの「ハマりポイント」の解説。 |
 | **Step 4** | **API公開と動作確認** | ・デプロイコマンド実行。<br>・Swagger UIでの確認。<br>・**AWSリソースの削除方法（重要）**。 |
 | **まとめ** | **エラーを乗り越えて得た知見** | ・初心者がハマるポイントのまとめ（補足記事への誘導枠）。<br>・ポートフォリオとしての展望。 |
+
+-----
+
+### 4\. 🎨 画像生成について
+
+「読者目線で理解しやすい画像」は非常に重要です。
+私は画像生成ツール（DALL-E 3など）を直接操作してファイルを出力することはできませんが、**「どのような図が必要か」を定義し、それを表現するためのコード（Mermaid記法など）や指示**を出すことは可能です。
+
+今回は、記事の信頼性を高めるため、\*\*「AI生成したイラスト」ではなく「論理的な構成図（ダイアグラム）」\*\*を使用すべきです。
+
+#### 記事に必要な画像リスト
+
+1.  **完成画面のスクショ**（あなたが撮ったものを使用）
+2.  **アーキテクチャ図**（以下のような構成図を作成します）
+      * [Host PC] ⇔ [Docker Container (Node.js + Python)] ⇔ [AWS (Lambda + API Gateway)]
+
+※ 記事執筆中に、この図を表現するMermaidコードを提供します。Notionや一部のMarkdownエディタ、またはMermaid Live Editorで画像化して使用できます。
+
+-----
+
+### 5\. 🏃‍♂️ 今後の執筆ワークフロー
+
+この手順で進めていきましょう。
+
+1.  **導入・アーキテクチャ編の執筆:**
+      * 「はじめに」から「Step 0」までを書きます。ここで読者の心を掴みます。
+2.  **環境構築編（Step 1〜2）の執筆:**
+      * Docker設定とFastAPIの実装について書きます。コードブロックを多用します。
+3.  **デプロイ編（Step 3〜4）の執筆:**
+      * 設定ファイルとデプロイ手順を書きます。ここが一番技術的に濃い部分です。
+4.  **まとめ・推敲:**
+      * 全体を読み直し、補足記事（エラー集）へのリンク箇所を作ります。
+5.  **画像・装飾の配置:**
+      * スクショや図を差し込み、見出しを整えます。
 
 -----
